@@ -1,3 +1,7 @@
+shmuel 25.08.2016 14:24:34 +0200 - build 4769
+
+1. Ещё одно уточнение 4767.
+
 shmuel 25.08.2016 13:53:19 +0200 - build 4768
 
 1. Уточнение 4767.
